--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
+<link href="style.css" rel="stylesheet" media="all" type="text/css"> 
 <body>
-	<h1>Hello BTS</h1>
+	<h1>Hello BTS this is me</h1>
 </body>
 </html>
